Fix boxes alignment on blog appearance page

--- a/admin/style/default.css
+++ b/admin/style/default.css
@@ -3924,6 +3924,7 @@ On adapte largeur et hauteur en fonction
   border: 1px solid var(--theme-current-border);
   min-height: 326px;
   position: relative;
+  flex-basis: 100%;
 }
 .box.current-theme .module-sshot:hover {
   cursor: auto;
