--- a/admin/style/scss/partials/_blog_theme.scss
+++ b/admin/style/scss/partials/_blog_theme.scss
@@ -127,6 +127,7 @@ On adapte largeur et hauteur en fonction
   border: 1px solid var(--theme-current-border);
   min-height: 326px;
   position: relative;
+  flex-basis: 100%;
   .module-sshot:hover {
     cursor: auto;
   }
